# pi-gui

./: .gitignore  .gitmodules  AGENTS.md  README.md  THIRD-PARTY-NOTICES.md  biome.json  bundle.sh  components.json  dmg.sh  e2e-lock.ts  e2e-sse-lock.ts  e2e-sse.ts  lefthook.yml  lock-test.ts  make-icon.swift  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
Resources/: AppIcon.icns
docs/: HANDOFF-swiftui-native.md  remote-control-design.md
scripts/: bundle-backend.ts  check-commit-msg.ts  fetch-node.ts  finalize-bundle.ts  gen-notices.ts  glyph-to-icon.py  update.sh
server/: AGENTS.md  README.md  git.ts  gui-state-extension.ts  index.ts  preflight.ts  remote-auth.ts  remote-config.ts  restore-path.ts  runtime-manager.ts  tailscale.ts  web-ui-context.ts
shared/: session-lock.ts
src-tauri/: AGENTS.md  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
swift/: Package.swift  bundle.sh  make-icon.swift
test/: e2e-lock.ts  e2e-sse-lock.ts  e2e-sse.ts  e2e-ws.ts  i18n-test.ts  lock-test.ts  poc.mjs  remote-auth-test.ts
web/: AGENTS.md  App.tsx  InfoPanel.tsx  MessageView.tsx  README.md  SessionTab.tsx  SettingsModal.tsx  Sidebar.tsx  api.ts  app.tsx  config.ts  directory-picker.tsx  env.d.ts  error-boundary.tsx  event-bus.ts  footer.tsx  git-panel.tsx  globals.css  i18n.ts  index.html  info-panel.tsx  log-viewer.tsx  main.tsx  markdown.tsx  message-view.tsx  model-controls.tsx  notifications.ts  preflight-gate.tsx  questionnaire-dialog.tsx  remote-panel.tsx  (+14 more)
(+124 files in other folders)
