[package]
name = "pi-gui"
version = "1.0.2"
description = "pi-gui — native shell for the pi coding agent web UI"
authors = ["Mingeon Kim"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pi_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2.3.3"
